feat: add mmkv migration utility, refactor benchmark UI, and update native build configs

--- a/apps/example/app.json
+++ b/apps/example/app.json
@@ -19,6 +19,9 @@
       "expo-router",
       "expo-build-properties",
       "react-native-nitro-storage"
-    ]
+    ],
+    "experiments": {
+      "typedRoutes": true
+    }
   }
 }
