--- a/package.json
+++ b/package.json
@@ -23,8 +23,21 @@
     "example:prebuild:clean": "turbo run prebuild:clean --filter=example"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "@types/node": "^20.0.0",
+    "jest": "^29.7.0",
+    "nitrogen": "^0.32.0",
+    "react-native-builder-bob": "^0.40.0",
+    "rimraf": "^6.0.1",
+    "ts-jest": "^29.2.5",
     "turbo": "^2.3.3",
     "typescript": "^5.6.3"
+  },
+  "overrides": {
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-nitro-modules": "^0.32.0"
   },
   "packageManager": "bun@1.1.38"
 }
