--- a/packages/react-native-nitro-storage/package.json
+++ b/packages/react-native-nitro-storage/package.json
@@ -78,23 +78,15 @@
     "@react-native/babel-preset": "^0.83.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/react-native": "^13.3.3",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
-    "jest": "^29.7.0",
-    "nitrogen": "^0.31.10",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-builder-bob": "^0.31.0",
-    "react-native-nitro-modules": "^0.31.10",
-    "rimraf": "^6.0.1",
-    "ts-jest": "^29.2.5",
-    "typescript": "^5.6.3"
+    "react-native-nitro-modules": "^0.32.0"
   },
   "peerDependencies": {
     "react": "*",
     "react-native": ">=0.75.0",
-    "react-native-nitro-modules": ">=0.31.0"
+    "react-native-nitro-modules": ">=0.32.0"
   },
   "react-native-builder-bob": {
     "source": "src",
