--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -13,10 +13,10 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.28.4",
-    "expo": "~54.0.29",
-    "expo-asset": "^12.0.11",
+    "expo": "~54.0.31",
+    "expo-asset": "~12.0.12",
     "expo-build-properties": "~1.0.10",
-    "expo-router": "~6.0.19",
+    "expo-router": "~6.0.21",
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "^6.0.9",
     "react": "19.1.0",
@@ -25,11 +25,12 @@
     "react-native-nitro-modules": "^0.32.0",
     "react-native-nitro-storage": "*",
     "react-native-safe-area-context": "5.6.2",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
     "@types/react": "~19.1.10",
-    "babel-preset-expo": "^54.0.8"
+    "babel-preset-expo": "~54.0.9"
   }
 }
