chore: update dependencies and improve error handling in NitroStorage
- Updated @types/node from 25.0.3 to 25.2.2
- Updated nitrogen from 0.32.0 to 0.33.7
- Updated react-native-builder-bob from 0.40.0 to 0.40.17
- Updated rimraf from 6.0.1 to 6.1.2
- Updated ts-jest from 29.2.5 to 29.4.6
- Updated turbo from 2.7.3 to 2.8.3
- Updated typescript from 5.6.3 to 5.9.3
- Updated packageManager from bun@1.1.38 to bun@1.3.9

- Added a method to ensure the native adapter is initialized in HybridStorage.
- Improved error handling for disk and secure storage operations in HybridStorage.
- Added validation for scope values in HybridStorage.
- Updated AndroidStorageAdapter to use a centralized error handling method.
- Enhanced thread safety in StorageTest by adjusting the number of operations per thread.
- Added a check for appDomain in IOSStorageAdapterCpp before clearing disk storage.

--- a/apps/example/app.json
+++ b/apps/example/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Nitro Storage Example",
+    "name": "Nitro Storage",
     "slug": "nitro-storage-example",
     "version": "1.0.0",
     "orientation": "portrait",
