--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,15 +13,15 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: latest
+          bun-version: 1.3.9
 
       - name: Cache dependencies
-        uses: actions/cache@v4
+        uses: actions/cache@v5
         with:
           path: |
             ~/.bun/install/cache
@@ -41,9 +41,10 @@ jobs:
         run: bun run test
 
       - name: Run JavaScript tests with coverage
-        run: |
-          cd packages/react-native-nitro-storage
-          bun run test:coverage
+        run: bun run test:coverage
+
+      - name: Run benchmark regression checks
+        run: bun run benchmark
 
       - name: Setup CMake (for C++ tests)
         run: |
