--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "codegen": "turbo run codegen",
     "typecheck": "turbo run typecheck",
     "test": "turbo run test",
-    "test:coverage": "turbo run test -- --coverage",
+    "test:coverage": "turbo run test:coverage --filter=react-native-nitro-storage",
+    "benchmark": "turbo run benchmark --filter=react-native-nitro-storage",
     "test:cpp": "turbo run test:cpp --filter=react-native-nitro-storage",
     "start": "turbo run start --filter=example --",
     "example:ios": "turbo run ios --filter=example",
@@ -42,7 +43,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-nitro-modules": "^0.33.9",
-    "@types/react": "^19.1.10"
+    "@types/react": "~19.1.10"
   },
-  "packageManager": "bun@1.1.38"
+  "packageManager": "bun@1.3.9"
 }
