--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "publish-package": "node scripts/publish.js",
     "build": "turbo run build",
     "lint": "turbo run lint",
+    "format": "turbo run format",
+    "format:check": "turbo run format:check",
     "clean": "turbo run clean",
     "codegen": "turbo run codegen",
     "typecheck": "turbo run typecheck",
@@ -26,13 +28,15 @@
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/node": "^25.2.3",
+    "eslint-config-expo-magic": "^2.0.2",
     "jest": "^30.2.0",
     "nitrogen": "^0.33.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-nitro-modules": "^0.33.9",
     "react-native-builder-bob": "^0.40.18",
+    "react-native-nitro-modules": "^0.33.9",
+    "react-test-renderer": "^19.2.4",
     "rimraf": "^6.1.2",
     "ts-jest": "^29.4.6",
     "turbo": "^2.8.9",
